[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml_translator"
version = "0.1.0"
description = "基于OpenAI的YAML文件翻译工具"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pkvpm>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "regex>=2023.0.0",
    "tqdm>=4.65.0",
    "pytz>=2023.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true 