[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml-translator"
version = "0.1.0"
description = "基于OpenAI的YAML文件翻译工具"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "BingZi-233", email = "your-email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pkvpm>=1.0.3,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "ruamel.yaml>=0.18.10,<0.19.0",
    "openai>=1.3.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "rich>=13.7.0,<14.0.0",
    "click>=8.1.7,<9.0.0",
    "pathspec>=0.12.1,<0.13.0",
    "backoff>=2.2.1,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "deepdiff>=6.7.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.2,<0.24.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pylint>=3.0.2,<4.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/BingZi-233/yaml-translator"
Repository = "https://github.com/BingZi-233/yaml-translator.git"
Documentation = "https://github.com/BingZi-233/yaml-translator/docs"
"Bug Tracker" = "https://github.com/BingZi-233/yaml-translator/issues"

[project.scripts]
yaml-translator = "yaml_translator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yaml_translator"]

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = ["pytest {args:tests}"]
test-cov = ["coverage run -m pytest {args:tests}", "coverage report"]
cov-report = ["coverage report"]
cov-html = ["coverage html"]
lint = ["uv pip sync requirements.lock", "black .", "isort .", "mypy ."]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=yaml_translator"
filterwarnings = ["ignore::DeprecationWarning"] 